feat: created home page with created components, and added react router to the project

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -10,6 +10,18 @@
   padding: 11px 20px;
 }
 
+.button:disabled {
+  background-color: grey;
+  background-color: grey;
+  cursor: not-allowed;
+}
+
+.button:hover:disabled {
+  background-color: grey;
+  background-color: grey;
+  cursor: not-allowed;
+}
+
 .button--primary {
   background-color: #2e3440;
   border-color: #2e3440;
