--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -5,9 +5,11 @@
   display: inline-flex;
   font-size: 14px;
   padding: 16px;
+  width: 100%;
 }
 
 .card:hover {
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-  transition: 0.15s;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25) !important;
+  transition: 0.25s;
+  cursor: pointer;
 }
